--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -365,18 +365,19 @@ small {
 }
 
 #new .card {
-	overflow: hidden;
 	box-shadow: 0px 4px 4px 0px #d3d3d3;
 }
 
-#new .card-img-top {
-	transition: all 1s;
+#new .inner {
 	overflow: hidden;
 }
 
-#new .card-img-top:hover {
-	transform: scale(1.1);
-	transition: all 1s;
+#new .inner img {
+	transition: all 1.5s ease;
+}
+
+#new .inner:hover img {
+	transform: scale(1.5);
 }
 
 @media (min-width: 760px) and (max-width: 768px) {
@@ -463,19 +464,16 @@ small {
 	background: #f8f9fa;
 }
 
-#featured img {
-	transition: all 1s;
+#featured .inner {
 	overflow: hidden;
 }
 
-#featured img:hover {
-	transform: scale(1.1);
-	transition: all 1s;
+#featured .inner img {
+	transition: all 1.5s ease;
 }
 
-#featured .card {
-	overflow: hidden;
-	box-shadow: 0px 4px 4px 0px #d3d3d3;
+#featured .inner:hover img {
+	transform: scale(1.3);
 }
 
 @media (min-width: 760px) and (max-width: 768px) {
